@@ -40,6 +40,7 @@ fixed bugs:
 - fixed bug in SCIPconsSetInitial() that occurred in pairwise presolving: add or delete constraint in initconss when changing
   the initial flag
 - fixed "GGT-Kaibel-Bug" in var.c, prop_pseudoobj.c and cons_varbound.c that occured while computing new values with infinity values
+- fixed assert in cons_and.c method SCIP_DECL_CONSINITSOL(consInitsolAnd)
 
 plugins:
 - added interface to QSopt due to Daniel Espinoza
